--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,6 @@
     -->
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.16/css/uikit.min.css" />
-
-    <!-- UIkit JS -->
-    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.16/js/uikit.min.js"></script>
-    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.16/js/uikit-icons.min.js"></script>
     <title>Transfers Matching</title>
   </head>
 
@@ -34,8 +30,12 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <!--Add buttons to initiate auth sequence and sign out-->
-    <button id="authorize_button" style="display: none;">Authorize</button>
-    <button id="signout_button" style="display: none;">Sign Out</button>
+    <div class="uk-section uk-section-xsmall uk-section-muted uk-padding-remove-vertical">
+      <div class="uk-container uk-container-xsmall">
+        <button id="authorize_button" style="display: none;">Authorize</button>
+        <button id="signout_button" style="display: none;">Sign Out</button>
+      </div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -43,12 +43,14 @@
 
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async defer src="https://apis.google.com/js/api.js">
-    </script>
+    <!-- google spreadsheets API -->
+    <script async defer src="https://apis.google.com/js/api.js"></script>
+    <!-- UIkit JS -->
+    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.16/js/uikit.min.js"></script>
+    <script async defer src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.16/js/uikit-icons.min.js"></script>
   </body>
 
 </html>
