--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,18 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <!--Add buttons to initiate auth sequence and sign out-->
-    <div class="uk-section uk-section-xsmall uk-section-muted uk-padding-remove-vertical">
-      <div class="uk-container uk-container-xsmall">
+    <div class="uk-section uk-section-default">
+      <div class="uk-container">
         <button id="authorize_button" style="display: none;">Authorize</button>
         <button id="signout_button" style="display: none;">Sign Out</button>
       </div>
     </div>
-    <div id="root"></div>
+    <div class="uk-section uk-section-default">
+      <div class="uk-container">
+        <div id="root"></div>
+      </div>
+    </div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
