--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,14 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <!--Add buttons to initiate auth sequence and sign out-->
-    <div class="uk-section uk-section-default">
-      <div class="uk-container">
+    <div class="uk-section uk-section-default uk-section-xsmall">
+      <div class="uk-container uk-container-small">
         <button id="authorize_button" style="display: none;">Authorize</button>
         <button id="signout_button" style="display: none;">Sign Out</button>
       </div>
     </div>
-    <div class="uk-section uk-section-default">
+    <hr class="uk-margin-remove-top" />
+    <div class="uk-section uk-section-default uk-section-xsmall">
       <div class="uk-container">
         <div id="root"></div>
       </div>
