--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
     <!--Add buttons to initiate auth sequence and sign out-->
     <div class="uk-section uk-section-default uk-section-xsmall">
       <div class="uk-container uk-container-small">
-        <button id="authorize_button" style="display: none;">Authorize</button>
-        <button id="signout_button" style="display: none;">Sign Out</button>
+        <button type="button" id="authorize_button" style="display: none;">Authorize</button>
+        <button type="button" id="signout_button" style="display: none;">Sign Out</button>
       </div>
     </div>
     <hr class="uk-margin-remove-top" />
